Modification removeFirst() en remove(0) pour la compilation java 8